# bayes

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  ansi.cpp  ansi.h  bayes.cpp  bayes.h  bayes.kdev4  bayes_impl.h  client.cpp  func.h  proto.h  server.cpp  socket.cpp  socket.h
